--- a/appsettings.json
+++ b/appsettings.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "DefaultConnection" : "Server=localhost\\SQLEXPRESS; Database=dotnet-rpg; Trusted_Connection=true;"
   },
+  "AppSettings": {
+    "Token": "Abandon all hope yee who enter"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
